cabal-version:       2.4
name:                gen-dmc
version:             0.1.0
synopsis:            RUN DMC style logo generator
homepage:            https://github.com/kmein/gen-dmc
license:             MIT
license-file:        LICENSE
author:              Kierán Meinhardt
maintainer:          kieran.meinhardt@gmail.com
category:            Graphics

executable gen-dmc
  main-is:             Main.hs
  other-extensions:    ApplicativeDo, FlexibleContexts, NoMonomorphismRestriction, RecordWildCards, TypeFamilies
  build-depends:       base, split, diagrams-lib, diagrams-svg, optparse-applicative
  default-language:    Haskell2010
